--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             ></a>
                           </li>
                           <li>
-                            <a href=" "
+                            <a href="https://github.com/jcvillarez"
                               ><span class="ico-circle"
                                 ><i class="bi bi-github"></i></span
                             ></a>
