--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Portfolio</title>
+    <title>John Carlo Villarez</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/favicon.png" rel="icon" />
 
     <!-- Vendor CSS Files -->
     <link
@@ -35,7 +35,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center justify-content-between">
-        <h1 class="logo"><a href="index.html">Portfolio</a></h1>
+        <h1 class="logo"><a href="index.html">John Carlo Villarez</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <a href="index.html" class="logo"
           ><img src="assets/img/logo.png" alt="" class="img-fluid"
@@ -86,7 +86,7 @@
                       <div class="col-sm-6 col-md-5">
                         <div class="about-img">
                           <img
-                            src="assets/img/testimonial-2.jpg"
+                            src="assets/img/hello.png"
                             class="img-fluid rounded b-shadow-a"
                             alt=""
                           />
@@ -114,8 +114,8 @@
                       </div>
                     </div>
                     <div class="skill-mf">
-                      <p class="title-s">Skill</p>
-                      <span>Html</span> <span class="pull-right">85%</span>
+                      <p class="title-s">Proficiency</p>
+                      <span>Frontend</span> <span class="pull-right">70%</span>
                       <div class="progress">
                         <div
                           class="progress-bar"
@@ -126,7 +126,7 @@
                           aria-valuemax="100"
                         ></div>
                       </div>
-                      <span>Css</span> <span class="pull-right">50%</span>
+                      <span>Backend</span> <span class="pull-right">50%</span>
                       <div class="progress">
                         <div
                           class="progress-bar"
@@ -137,7 +137,7 @@
                           aria-valuemax="100"
                         ></div>
                       </div>
-                      <span>Php</span> <span class="pull-right">60%</span>
+                      <span>Programming</span> <span class="pull-right">50%</span>
                       <div class="progress">
                         <div
                           class="progress-bar"
@@ -148,7 +148,7 @@
                           aria-valuemax="100"
                         ></div>
                       </div>
-                      <span>JavaScript</span>
+                      <!-- <span>JavaScript</span>
                       <span class="pull-right">75%</span>
                       <div class="progress">
                         <div
@@ -170,7 +170,7 @@
                           aria-valuemin="0"
                           aria-valuemax="100"
                         ></div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -179,16 +179,11 @@
                         <h5 class="title-left">About Me</h5>
                       </div>
                       <p class="lead">
-                        I am a versatile and highly skilled with a passion for
-                        problem-solving and a keen eye for detail. With a solid
-                        foundation in Web Development and Programming, I am
-                        seeking a position that will allow me to use my skills
-                        to their full potential. In addition to my technical
-                        skills, I bring a positive and proactive attitude to
-                        every team I join. I believe in fostering a
-                        collaborative and inclusive work environment that
-                        encourages creativity, diversity of thought, and the
-                        exchange of ideas.
+                        Hi everyone! My Name is John Carlo Villarez, I have a
+                        bachelor of Science in Information Techonology. I'm
+                        trying to improve my skills, especially in Web
+                        Development and Game Testing by trying out different
+                        things.
                       </p>
                     </div>
                   </div>
@@ -226,11 +221,6 @@
                           assist you.
                         </p>
                         <ul class="list-ico">
-                          <li>
-                            <span class="bi bi-geo-alt"></span> 0684 Maleniza
-                            St. Z-5 San Felipe Naga City, Camarines Sur,
-                            Philippines
-                          </li>
                           <li>
                             <span class="bi bi-phone"></span> (+63) 956-807-3851
                           </li>
@@ -275,32 +265,6 @@
       <!-- End Contact Section -->
     </main>
     <!-- End #main -->
-
-    <!-- ======= Footer ======= -->
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="copyright-box">
-              <p class="copyright">
-                &copy; Copyright <strong>DevFolio</strong>. All Rights Reserved
-              </p>
-              <div class="credits">
-                <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-            -->
-                Designed by
-                <a href="https://bootstrapmade.com/">BootstrapMade</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <!-- End  Footer -->
 
     <div id="preloader"></div>
     <a
