--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 data-typed-items="Web Developer, Freelancer"
               ></span>
             </p>
+            <button onclick="window.open('https://github.com/jcvillarez/jcvillarez.github.io', '_blank');" class="button"> My Resume </button>
           </div>
         </div>
       </div>
