--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 data-typed-items="Web Developer, Freelancer"
               ></span>
             </p>
-            <button onclick="window.open('https://github.com/jcvillarez/jcvillarez.github.io', '_blank');" class="button"> My Resume </button>
+            <button onclick="window.open('https://drive.google.com/file/d/1_65RA3-GtvqFB0TeIN_yHwN5HM4GHkZ1/view?usp=drive_link', '_blank');" class="button"> My Resume </button>
           </div>
         </div>
       </div>
