--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#about">About</a></li>
+            <li><a class="nav-link scrollto" href="#projects">Projects</a></li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -67,7 +68,12 @@
                 data-typed-items="Web Developer, Freelancer"
               ></span>
             </p>
-            <button onclick="window.open('https://drive.google.com/file/d/1_65RA3-GtvqFB0TeIN_yHwN5HM4GHkZ1/view?usp=drive_link', '_blank');" class="button"> My Resume </button>
+            <button
+              onclick="window.open('https://drive.google.com/file/d/1_65RA3-GtvqFB0TeIN_yHwN5HM4GHkZ1/view?usp=drive_link', '_blank');"
+              class="button"
+            >
+              My Resume
+            </button>
           </div>
         </div>
       </div>
@@ -138,7 +144,8 @@
                           aria-valuemax="100"
                         ></div>
                       </div>
-                      <span>Programming</span> <span class="pull-right">50%</span>
+                      <span>Programming</span>
+                      <span class="pull-right">50%</span>
                       <div class="progress">
                         <div
                           class="progress-bar"
@@ -149,29 +156,6 @@
                           aria-valuemax="100"
                         ></div>
                       </div>
-                      <!-- <span>JavaScript</span>
-                      <span class="pull-right">75%</span>
-                      <div class="progress">
-                        <div
-                          class="progress-bar"
-                          role="progressbar"
-                          style="width: 75%"
-                          aria-valuenow="90"
-                          aria-valuemin="0"
-                          aria-valuemax="100"
-                        ></div>
-                      </div>
-                      <span>React</span> <span class="pull-right">60%</span>
-                      <div class="progress">
-                        <div
-                          class="progress-bar"
-                          role="progressbar"
-                          style="width: 60%"
-                          aria-valuenow="90"
-                          aria-valuemin="0"
-                          aria-valuemax="100"
-                        ></div>
-                      </div> -->
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -195,6 +179,129 @@
         </div>
       </section>
       <!-- End About Section -->
+
+      <!-- ======= Projects Section ======= -->
+      <section id="projects" class="projects-mf pt-5 route">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="title-box text-center">
+                <h3 class="title-a">Projects</h3>
+                <p class="subtitle-a">
+                  Here are the Projects that I've done so far.
+                </p>
+                <div class="line-mf"></div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="project-box">
+                <div class="project-ico">
+                  <a
+                    href="https://github.com/jcvillarez/adnu-hashflow-workflow-system"
+                    ><span class="ico-circle"
+                      ><i class="bi bi-briefcase"></i></span
+                  ></a>
+                </div>
+                <div class="project-content">
+                  <h2 class="s-title">Workflow System</h2>
+                  <p class="s-description text-center">
+                    A workflow system that automates approval for employees of
+                    their document.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="project-box">
+                <div class="project-ico">
+                  <a href="">
+                    <span class="ico-circle"
+                      ><i class="bi bi-card-checklist"></i
+                    ></span>
+                  </a>
+                </div>
+                <div class="project-content">
+                  <h2 class="s-title">C++ Problems</h2>
+                  <p class="s-description text-center">
+                    A collection of C++ problems that I've done so far.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="col-md-4">
+              <div class="project-box">
+                <div class="project-ico">
+                  <span class="ico-circle"
+                    ><i class="bi bi-bar-chart"></i
+                  ></span>
+                </div>
+                <div class="project-content">
+                  <h2 class="s-title">Photography</h2>
+                  <p class="s-description text-center">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Magni adipisci eaque autem fugiat! Quia, provident vitae!
+                    Magni tempora perferendis eum non provident.
+                  </p>
+                </div>
+              </div>
+            </div> -->
+            <!-- <div class="col-md-4">
+              <div class="project-box">
+                <div class="project-ico">
+                  <span class="ico-circle"
+                    ><i class="bi bi-binoculars"></i
+                  ></span>
+                </div>
+                <div class="project-content">
+                  <h2 class="s-title">Responsive Design</h2>
+                  <p class="s-description text-center">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Magni adipisci eaque autem fugiat! Quia, provident vitae!
+                    Magni tempora perferendis eum non provident.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="project-box">
+                <div class="project-ico">
+                  <span class="ico-circle"
+                    ><i class="bi bi-brightness-high"></i
+                  ></span>
+                </div>
+                <div class="project-content">
+                  <h2 class="s-title">Graphic Design</h2>
+                  <p class="s-description text-center">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Magni adipisci eaque autem fugiat! Quia, provident vitae!
+                    Magni tempora perferendis eum non provident.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="project-box">
+                <div class="project-ico">
+                  <span class="ico-circle"
+                    ><i class="bi bi-calendar4-week"></i
+                  ></span>
+                </div>
+                <div class="project-content">
+                  <h2 class="s-title">Marketing projects</h2>
+                  <p class="s-description text-center">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Magni adipisci eaque autem fugiat! Quia, provident vitae!
+                    Magni tempora perferendis eum non provident.
+                  </p>
+                </div> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End projects Section -->
 
       <!-- ======= Contact Section ======= -->
       <section
