--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="col-md-4">
               <div class="project-box">
                 <div class="project-ico">
-                  <a href="">
+                  <a href="https://github.com/jcvillarez/c-plus-plus-problems">
                     <span class="ico-circle"
                       ><i class="bi bi-card-checklist"></i
                     ></span>
@@ -225,7 +225,7 @@
                 <div class="project-content">
                   <h2 class="s-title">C++ Problems</h2>
                   <p class="s-description text-center">
-                    A collection of C++ problems that I've done so far.
+                    A collection of C++ problems that I've solved so far.
                   </p>
                 </div>
               </div>
