--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               ></span>
             </p>
             <button
-              onclick="window.open('https://drive.google.com/file/d/1_65RA3-GtvqFB0TeIN_yHwN5HM4GHkZ1/view?usp=drive_link', '_blank');"
+              onclick="window.open('https://drive.google.com/file/d/1yCjRSBaMIs-f4K2bWRN_XVarJXEuLAJS/view?usp=sharing', '_blank');"
               class="button"
             >
               My Resume
