--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <!--<div class="col-md-4">
               <div class="project-box">
                 <div class="project-ico">
                   <a href="https://github.com/jcvillarez/c-plus-plus-problems">
@@ -229,7 +229,7 @@
                   </p>
                 </div>
               </div>
-            </div>
+            </div> -->
             <!-- <div class="col-md-4">
               <div class="project-box">
                 <div class="project-ico">
