--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               ></span>
             </p>
             <button
-              onclick="window.open('https://drive.google.com/file/d/1UYBTb-jC1WYl4U-8GoJ29yw3Vt8p6G8G/view?usp=sharing', '_blank');"
+              onclick="window.open('https://drive.google.com/file/d/1Ajb7uR8CvFbr9QO2QOaveuBSZMkqt7q7/view?usp=drive_link', '_blank');"
               class="button"
             >
               My Resume
