--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <p class="hero-subtitle">
               <span
                 class="typed"
-                data-typed-items="Web Developer, Freelancer"
+                data-typed-items="Web Developer, Network Specialist, Technical Support, Freelancer"
               ></span>
             </p>
             <button
