--- a/index.html
+++ b/index.html
@@ -213,23 +213,23 @@
                 </div>
               </div>
             </div>
-            <!--<div class="col-md-4">
+            <div class="col-md-4">
               <div class="project-box">
                 <div class="project-ico">
-                  <a href="https://github.com/jcvillarez/c-plus-plus-problems">
+                  <a href="https://github.com/jcvillarez/intern-dtr-system">
                     <span class="ico-circle"
                       ><i class="bi bi-card-checklist"></i
                     ></span>
                   </a>
                 </div>
                 <div class="project-content">
-                  <h2 class="s-title">C++ Problems</h2>
+                  <h2 class="s-title">NOCS Intern DTR System</h2>
                   <p class="s-description text-center">
-                    A collection of C++ problems that I've solved so far.
+                    A Daily Time Record System for Intern's in Network Operations and Computer Services.
                   </p>
                 </div>
               </div>
-            </div> -->
+            </div>
             <!-- <div class="col-md-4">
               <div class="project-box">
                 <div class="project-ico">
