--- a/index.html
+++ b/index.html
@@ -230,23 +230,23 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="col-md-4">
+            <div class="col-md-4">
               <div class="project-box">
                 <div class="project-ico">
-                  <span class="ico-circle"
-                    ><i class="bi bi-bar-chart"></i
-                  ></span>
+                  <a href="https://github.com/jcvillarez/terminal-games">
+                    <span class="ico-circle"
+                      ><i class="bi bi-bar-chart"></i
+                    ></span>
+                  </a>
                 </div>
                 <div class="project-content">
-                  <h2 class="s-title">Photography</h2>
+                  <h2 class="s-title">Terminal Games in Windows</h2>
                   <p class="s-description text-center">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Magni adipisci eaque autem fugiat! Quia, provident vitae!
-                    Magni tempora perferendis eum non provident.
+                    A Simple Terminal Games using nodejs.
                   </p>
                 </div>
               </div>
-            </div> -->
+            </div> 
             <!-- <div class="col-md-4">
               <div class="project-box">
                 <div class="project-ico">
